# chillbuff

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md  doxyfile
.circleci/: config.yml
docs/: annotated.html  chillbuff_8h.html  chillbuff_8h_source.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  structchillbuff-members.html  structchillbuff.html
docs/search/: all_1.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
include/: chillbuff.h  utils.h
include/utils/: definitions.h
tests/: CMakeLists.txt  README.md  chillbuff_tests.c
